Working on DF basic info - missing values

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import streamlit as st\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "#TODO: check if ydataprofiler can be added as HTML\n",
     "\n",
@@ -399,28 +400,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "years_of_experience\n",
-       ">=16     65\n",
-       "6-10     28\n",
-       "11-15    25\n",
-       "0-2      13\n",
-       "3-5       7\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m missing_matrix \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39misnull()\n\u001b[0;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m      4\u001b[0m sns\u001b[38;5;241m.\u001b[39mheatmap(missing_matrix\u001b[38;5;241m.\u001b[39mT, cbar\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBlues\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMissing Values Matrix\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+     ]
     }
    ],
    "source": [
-    "df['years_of_experience'].dtype"
+    "missing_matrix = df.isnull()\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.heatmap(missing_matrix.T, cbar=False, cmap=\"Blues\")\n",
+    "plt.title(\"Missing Values Matrix\")\n",
+    "plt.xlabel(\"Record Index\")\n",
+    "plt.ylabel(\"Columns\")\n",
+    "plt.show()"
    ]
   }
  ],
