added new stacked charts

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,30 +400,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m missing_matrix \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39misnull()\n\u001b[0;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m      4\u001b[0m sns\u001b[38;5;241m.\u001b[39mheatmap(missing_matrix\u001b[38;5;241m.\u001b[39mT, cbar\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBlues\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMissing Values Matrix\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "age                                      0\n",
+       "edu_level                                0\n",
+       "fav_animals                              0\n",
+       "fav_place                               15\n",
+       "gender                                   2\n",
+       "hobby_art                                0\n",
+       "hobby_books                              0\n",
+       "hobby_movies                             0\n",
+       "hobby_other                              0\n",
+       "hobby_sport                              0\n",
+       "hobby_video_games                        0\n",
+       "industry                                20\n",
+       "learning_pref_books                      0\n",
+       "learning_pref_chatgpt                    0\n",
+       "learning_pref_offline_courses            0\n",
+       "learning_pref_online_courses             0\n",
+       "learning_pref_personal_projects          0\n",
+       "learning_pref_teaching                   0\n",
+       "learning_pref_teamwork                   0\n",
+       "learning_pref_workshops                  0\n",
+       "motivation_career                        0\n",
+       "motivation_challenges                    0\n",
+       "motivation_creativity_and_innovation     0\n",
+       "motivation_money_and_job                 0\n",
+       "motivation_personal_growth               0\n",
+       "motivation_remote                        0\n",
+       "sweet_or_salty                          10\n",
+       "years_of_experience                      2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "missing_matrix = df.isnull()\n",
-    "\n",
-    "plt.figure(figsize=(12, 8))\n",
-    "sns.heatmap(missing_matrix.T, cbar=False, cmap=\"Blues\")\n",
-    "plt.title(\"Missing Values Matrix\")\n",
-    "plt.xlabel(\"Record Index\")\n",
-    "plt.ylabel(\"Columns\")\n",
-    "plt.show()"
+    "df.isnull().sum()"
    ]
   }
  ],
