--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,382 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>edu_level</th>\n",
-       "      <th>fav_animals</th>\n",
-       "      <th>fav_place</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>hobby_art</th>\n",
-       "      <th>hobby_books</th>\n",
-       "      <th>hobby_movies</th>\n",
-       "      <th>hobby_other</th>\n",
-       "      <th>hobby_sport</th>\n",
-       "      <th>...</th>\n",
-       "      <th>learning_pref_teamwork</th>\n",
-       "      <th>learning_pref_workshops</th>\n",
-       "      <th>motivation_career</th>\n",
-       "      <th>motivation_challenges</th>\n",
-       "      <th>motivation_creativity_and_innovation</th>\n",
-       "      <th>motivation_money_and_job</th>\n",
-       "      <th>motivation_personal_growth</th>\n",
-       "      <th>motivation_remote</th>\n",
-       "      <th>sweet_or_salty</th>\n",
-       "      <th>years_of_experience</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Psy</td>\n",
-       "      <td>W lesie</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>salty</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Psy</td>\n",
-       "      <td>Nad wodą</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>salty</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Średnie</td>\n",
-       "      <td>Inne</td>\n",
-       "      <td>W lesie</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>25-34</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Koty</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3-5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Inne</td>\n",
-       "      <td>W lesie</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Średnie</td>\n",
-       "      <td>Psy</td>\n",
-       "      <td>W lesie</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>6-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Brak ulubionych</td>\n",
-       "      <td>W lesie</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Średnie</td>\n",
-       "      <td>Inne</td>\n",
-       "      <td>W górach</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>0-2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Inne</td>\n",
-       "      <td>Nad wodą</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>55-64</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Psy</td>\n",
-       "      <td>Nad wodą</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>salty</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10 rows × 28 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       age edu_level      fav_animals fav_place  gender  hobby_art  \\\n",
-       "25   45-54    Wyższe              Psy   W lesie     0.0          0   \n",
-       "68   35-44    Wyższe              Psy  Nad wodą     0.0          0   \n",
-       "93   45-54   Średnie             Inne   W lesie     0.0          0   \n",
-       "115  25-34    Wyższe             Koty       NaN     0.0          0   \n",
-       "117  45-54    Wyższe             Inne   W lesie     0.0          0   \n",
-       "98   35-44   Średnie              Psy   W lesie     1.0          0   \n",
-       "42   35-44    Wyższe  Brak ulubionych   W lesie     0.0          0   \n",
-       "13   35-44   Średnie             Inne  W górach     0.0          0   \n",
-       "14   45-54    Wyższe             Inne  Nad wodą     0.0          0   \n",
-       "72   55-64    Wyższe              Psy  Nad wodą     0.0          0   \n",
-       "\n",
-       "     hobby_books  hobby_movies  hobby_other  hobby_sport  ...  \\\n",
-       "25             0             0            0            0  ...   \n",
-       "68             0             0            0            1  ...   \n",
-       "93             1             0            0            1  ...   \n",
-       "115            1             1            0            0  ...   \n",
-       "117            1             0            1            0  ...   \n",
-       "98             1             0            0            0  ...   \n",
-       "42             0             0            1            0  ...   \n",
-       "13             1             1            0            0  ...   \n",
-       "14             0             0            1            0  ...   \n",
-       "72             1             0            0            0  ...   \n",
-       "\n",
-       "     learning_pref_teamwork learning_pref_workshops  motivation_career  \\\n",
-       "25                        0                       0                  0   \n",
-       "68                        0                       0                  0   \n",
-       "93                        0                       0                  0   \n",
-       "115                       1                       1                  0   \n",
-       "117                       1                       1                  0   \n",
-       "98                        0                       1                  0   \n",
-       "42                        0                       0                  0   \n",
-       "13                        0                       0                  0   \n",
-       "14                        1                       1                  0   \n",
-       "72                        1                       1                  0   \n",
-       "\n",
-       "     motivation_challenges  motivation_creativity_and_innovation  \\\n",
-       "25                       1                                     0   \n",
-       "68                       0                                     0   \n",
-       "93                       0                                     1   \n",
-       "115                      1                                     0   \n",
-       "117                      1                                     0   \n",
-       "98                       0                                     0   \n",
-       "42                       0                                     0   \n",
-       "13                       0                                     0   \n",
-       "14                       1                                     0   \n",
-       "72                       1                                     0   \n",
-       "\n",
-       "     motivation_money_and_job  motivation_personal_growth  motivation_remote  \\\n",
-       "25                          0                           0                  0   \n",
-       "68                          1                           1                  0   \n",
-       "93                          0                           1                  0   \n",
-       "115                         0                           1                  0   \n",
-       "117                         0                           1                  0   \n",
-       "98                          1                           1                  0   \n",
-       "42                          1                           1                  0   \n",
-       "13                          0                           1                  0   \n",
-       "14                          0                           1                  0   \n",
-       "72                          0                           1                  0   \n",
-       "\n",
-       "     sweet_or_salty  years_of_experience  \n",
-       "25            salty                 >=16  \n",
-       "68            salty                 >=16  \n",
-       "93            sweet                 >=16  \n",
-       "115             NaN                  3-5  \n",
-       "117           sweet                 >=16  \n",
-       "98            sweet                 6-10  \n",
-       "42            sweet                 >=16  \n",
-       "13            sweet                  0-2  \n",
-       "14              NaN                 >=16  \n",
-       "72            salty                  NaN  \n",
-       "\n",
-       "[10 rows x 28 columns]"
+       "edu_level\n",
+       "Wyższe        110\n",
+       "Średnie        29\n",
+       "Podstawowe      1\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sample(10)"
+    "df['edu_level'].value_counts()"
    ]
   },
   {
@@ -443,7 +87,7 @@
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "df['age'].value_counts()"
    ]
   }
  ],
