Working on other tabs

--- a/test.ipynb
+++ b/test.ipynb
@@ -20,441 +20,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>edu_level</th>\n",
-       "      <th>fav_animals</th>\n",
-       "      <th>fav_place</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>hobby_art</th>\n",
-       "      <th>hobby_books</th>\n",
-       "      <th>hobby_movies</th>\n",
-       "      <th>hobby_other</th>\n",
-       "      <th>hobby_sport</th>\n",
-       "      <th>...</th>\n",
-       "      <th>learning_pref_teamwork</th>\n",
-       "      <th>learning_pref_workshops</th>\n",
-       "      <th>motivation_career</th>\n",
-       "      <th>motivation_challenges</th>\n",
-       "      <th>motivation_creativity_and_innovation</th>\n",
-       "      <th>motivation_money_and_job</th>\n",
-       "      <th>motivation_personal_growth</th>\n",
-       "      <th>motivation_remote</th>\n",
-       "      <th>sweet_or_salty</th>\n",
-       "      <th>years_of_experience</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Brak ulubionych</td>\n",
-       "      <td>Nad wodą</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Koty i Psy</td>\n",
-       "      <td>W górach</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Psy</td>\n",
-       "      <td>W lesie</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Koty i Psy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>salty</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Psy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>6-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>55-64</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Inne</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Inne</td>\n",
-       "      <td>Nad wodą</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>45-54</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Psy</td>\n",
-       "      <td>W górach</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>salty</td>\n",
-       "      <td>&gt;=16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>&lt;18</td>\n",
-       "      <td>Podstawowe</td>\n",
-       "      <td>Brak ulubionych</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0-2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Wyższe</td>\n",
-       "      <td>Psy</td>\n",
-       "      <td>W lesie</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>salty</td>\n",
-       "      <td>11-15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       age   edu_level      fav_animals fav_place  gender  hobby_art  \\\n",
-       "37   35-44      Wyższe  Brak ulubionych  Nad wodą     0.0          0   \n",
-       "63   35-44      Wyższe       Koty i Psy  W górach     1.0          0   \n",
-       "114  45-54      Wyższe              Psy   W lesie     0.0          0   \n",
-       "73   45-54      Wyższe       Koty i Psy       NaN     0.0          0   \n",
-       "77   35-44      Wyższe              Psy       NaN     1.0          0   \n",
-       "..     ...         ...              ...       ...     ...        ...   \n",
-       "30   55-64      Wyższe             Inne       NaN     0.0          0   \n",
-       "128  45-54      Wyższe             Inne  Nad wodą     0.0          0   \n",
-       "60   45-54      Wyższe              Psy  W górach     0.0          0   \n",
-       "0      <18  Podstawowe  Brak ulubionych       NaN     1.0          0   \n",
-       "54   35-44      Wyższe              Psy   W lesie     0.0          0   \n",
-       "\n",
-       "     hobby_books  hobby_movies  hobby_other  hobby_sport  ...  \\\n",
-       "37             1             0            0            0  ...   \n",
-       "63             1             1            1            0  ...   \n",
-       "114            0             1            0            1  ...   \n",
-       "73             0             1            1            0  ...   \n",
-       "77             1             1            0            1  ...   \n",
-       "..           ...           ...          ...          ...  ...   \n",
-       "30             0             1            0            0  ...   \n",
-       "128            0             0            1            1  ...   \n",
-       "60             1             1            0            1  ...   \n",
-       "0              0             0            0            0  ...   \n",
-       "54             1             1            0            0  ...   \n",
-       "\n",
-       "     learning_pref_teamwork learning_pref_workshops  motivation_career  \\\n",
-       "37                        1                       1                  0   \n",
-       "63                        1                       1                  0   \n",
-       "114                       0                       0                  0   \n",
-       "73                        1                       0                  0   \n",
-       "77                        0                       1                  0   \n",
-       "..                      ...                     ...                ...   \n",
-       "30                        1                       1                  0   \n",
-       "128                       1                       1                  0   \n",
-       "60                        1                       1                  0   \n",
-       "0                         0                       0                  0   \n",
-       "54                        0                       0                  0   \n",
-       "\n",
-       "     motivation_challenges  motivation_creativity_and_innovation  \\\n",
-       "37                       1                                     0   \n",
-       "63                       1                                     0   \n",
-       "114                      0                                     0   \n",
-       "73                       1                                     0   \n",
-       "77                       0                                     0   \n",
-       "..                     ...                                   ...   \n",
-       "30                       1                                     0   \n",
-       "128                      0                                     0   \n",
-       "60                       1                                     0   \n",
-       "0                        0                                     0   \n",
-       "54                       0                                     0   \n",
-       "\n",
-       "     motivation_money_and_job  motivation_personal_growth  motivation_remote  \\\n",
-       "37                          0                           0                  0   \n",
-       "63                          0                           1                  0   \n",
-       "114                         0                           1                  0   \n",
-       "73                          1                           1                  0   \n",
-       "77                          0                           1                  0   \n",
-       "..                        ...                         ...                ...   \n",
-       "30                          1                           1                  0   \n",
-       "128                         1                           1                  0   \n",
-       "60                          1                           1                  0   \n",
-       "0                           0                           0                  0   \n",
-       "54                          1                           1                  0   \n",
-       "\n",
-       "     sweet_or_salty  years_of_experience  \n",
-       "37            sweet                 >=16  \n",
-       "63            sweet                 >=16  \n",
-       "114           sweet                 >=16  \n",
-       "73            salty                 >=16  \n",
-       "77            sweet                 6-10  \n",
-       "..              ...                  ...  \n",
-       "30              NaN                11-15  \n",
-       "128           sweet                 >=16  \n",
-       "60            salty                 >=16  \n",
-       "0               NaN                  0-2  \n",
-       "54            salty                11-15  \n",
-       "\n",
-       "[100 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.sample(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "age\n",
-       "35-44      55\n",
-       "45-54      40\n",
-       "25-34      22\n",
-       "55-64       9\n",
-       "18-24       6\n",
-       ">=65        5\n",
-       "unknown     2\n",
-       "<18         1\n",
-       "Name: count, dtype: int64"
+       "Index(['age', 'edu_level', 'fav_animals', 'fav_place', 'gender', 'hobby_art',\n",
+       "       'hobby_books', 'hobby_movies', 'hobby_other', 'hobby_sport',\n",
+       "       'hobby_video_games', 'industry', 'learning_pref_books',\n",
+       "       'learning_pref_chatgpt', 'learning_pref_offline_courses',\n",
+       "       'learning_pref_online_courses', 'learning_pref_personal_projects',\n",
+       "       'learning_pref_teaching', 'learning_pref_teamwork',\n",
+       "       'learning_pref_workshops', 'motivation_career', 'motivation_challenges',\n",
+       "       'motivation_creativity_and_innovation', 'motivation_money_and_job',\n",
+       "       'motivation_personal_growth', 'motivation_remote', 'sweet_or_salty',\n",
+       "       'years_of_experience'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['age'].value_counts()"
+    "df['industry']"
    ]
   }
  ],
